--- a/app/src/main/res/layout/activity_edit_pills.xml
+++ b/app/src/main/res/layout/activity_edit_pills.xml
@@ -41,6 +41,20 @@
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <ImageButton
+        android:id="@+id/voiceRecEditPills"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="Voice Recognition"
+        android:src="@drawable/ic_microphone"
+        android:scaleType="centerCrop"
+        android:padding="6dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
         android:id="@+id/homeEditPills"
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -224,6 +238,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/beforeBreakfastTxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -243,6 +258,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/afterBreakfastTxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -262,6 +278,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/middayTxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -281,6 +298,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/afternoonTxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -300,6 +318,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/beforeDinnerTxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -318,6 +337,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/afterDinnerTxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
