Contacts voice recognition completed

--- a/app/src/main/res/layout/activity_display_contacts.xml
+++ b/app/src/main/res/layout/activity_display_contacts.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Προβολή Επαφής"
+        android:text="View Contact"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
@@ -136,7 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="400dp"
-        android:text="Όνομα:"
+        android:text="Name:"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +148,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="512dp"
-        android:text="Τηλέφωνο:"
+        android:text="Phone Number:"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +160,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="605dp"
-        android:text="Επαφή Έκτακτης Ανάγκης"
+        android:text="Emergency Contact"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
