--- a/app/src/main/res/layout/activity_edit_contacts.xml
+++ b/app/src/main/res/layout/activity_edit_contacts.xml
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Επεξεργασία Επαφής"
+        android:text="Edit Contact"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -99,7 +99,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="438dp"
         android:ems="10"
-        android:hint="Συμπληρώστε όνομα"
+        android:hint="Fill the name"
         android:background="@android:color/transparent"
         android:inputType="text"
         android:textColor="@color/black"
@@ -127,7 +127,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="550dp"
         android:ems="10"
-        android:hint="Συμπληρώστε τηλέφωνο"
+        android:hint="Fill the phone number"
         android:background="@android:color/transparent"
         android:inputType="phone"
         android:textColor="@color/black"
@@ -143,7 +143,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="400dp"
-        android:text="Όνομα:"
+        android:text="Name:"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +155,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="512dp"
-        android:text="Τηλέφωνο:"
+        android:text="Phone Number:"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="605dp"
-        android:text="Επαφή Έκτακτης Ανάγκης"
+        android:text="Emergency Contact"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -179,7 +179,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:backgroundTint="@color/green"
-        android:text="Αποθήκευση"
+        android:text="Save"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
