--- a/app/src/main/res/layout/activity_add_contacts.xml
+++ b/app/src/main/res/layout/activity_add_contacts.xml
@@ -58,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Προσθήκη Επαφής"
+        android:text="Add Contact"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
@@ -98,7 +98,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="438dp"
         android:ems="10"
-        android:hint="Συμπληρώστε όνομα"
+        android:hint="Fill the name"
         android:background="@android:color/transparent"
         android:inputType="text"
         android:textColor="@color/black"
@@ -126,7 +126,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="550dp"
         android:ems="10"
-        android:hint="Συμπληρώστε τηλέφωνο"
+        android:hint="Fill the phone number"
         android:background="@android:color/transparent"
         android:inputType="phone"
         android:textColor="@color/black"
@@ -142,7 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="400dp"
-        android:text="Όνομα:"
+        android:text="Name:"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +154,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="512dp"
-        android:text="Τηλέφωνο:"
+        android:text="Phone Number:"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,7 +166,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="605dp"
-        android:text="Επαφή Έκτακτης Ανάγκης"
+        android:text="Emergency Contact"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -178,7 +178,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:backgroundTint="@color/green"
-        android:text="Προσθήκη"
+        android:text="Add Contact"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
