English messages done

--- a/app/src/main/res/layout/activity_display_profile.xml
+++ b/app/src/main/res/layout/activity_display_profile.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Προβολή Προφίλ"
+        android:text="View Profile"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -69,7 +69,7 @@
         android:id="@+id/displayProfileTextName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Όνομα"
+        android:text="Name"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -95,7 +95,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Επώνυμο"
+        android:text="Surname"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -121,7 +121,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Διεύθυνση"
+        android:text="Address"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -147,7 +147,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Πόλη"
+        android:text="City"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -173,7 +173,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Ταχυδρομικός Κώδικας"
+        android:text="Zipcode"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -199,7 +199,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Ομάδα Αίματος"
+        android:text="Blood Type"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
