--- a/app/src/main/res/layout/activity_user_sos_info.xml
+++ b/app/src/main/res/layout/activity_user_sos_info.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Στοιχεία Κατόχου"
+        android:text="Owner Information"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -69,7 +69,7 @@
         android:id="@+id/emergenyNameSurname"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Ονοματεπώνυμο"
+        android:text="Full Name"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -96,7 +96,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Διεύθυνση"
+        android:text="Address"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -123,7 +123,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Πόλη &amp; Ταχυδρομικός Κώδικας"
+        android:text="City &amp; Zipcode"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -150,7 +150,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Φάρμακα"
+        android:text="Medication"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
