--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -64,25 +64,11 @@
         app:srcCompat="@drawable/person"
         app:tint="@color/blue" />
 
-    <ImageButton
-        android:id="@+id/voiceRecEditProfile"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="Voice Recognition"
-        android:src="@drawable/ic_microphone"
-        android:scaleType="centerCrop"
-        android:padding="6dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/editProfile_textName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Όνομα"
+        android:text="Name"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -96,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε το όνομα σας"
+        android:hint="Enter your name"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColorHint="#999999"
@@ -111,7 +97,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Επώνυμο"
+        android:text="Surname"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -125,7 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε το επώνυμο σας"
+        android:hint="Enter your surname"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColorHint="#999999"
@@ -140,7 +126,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Διεύθυνση"
+        android:text="Address"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -154,7 +140,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε τη διεύθυνση σας"
+        android:hint="Enter your home address"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColorHint="#999999"
@@ -169,7 +155,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Πόλη"
+        android:text="City"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -183,7 +169,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε τη πόλη"
+        android:hint="Enter the city of your address"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColorHint="#999999"
@@ -198,7 +184,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Ταχυδρομικός Κώδικας"
+        android:text="Zipcode"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -212,7 +198,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε τον ταχ. κώδ."
+        android:hint="Enter your zipcode"
         android:padding="12dp"
         android:inputType="number"
         android:textColorHint="#999999"
@@ -227,7 +213,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Ομάδα Αίματος"
+        android:text="Blood Type"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
