--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Όνομα"
+        android:text="Name"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε το όνομα σας"
+        android:hint="Enter your name"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColorHint="#999999"
@@ -64,7 +64,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Επώνυμο"
+        android:text="Surname"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε το επώνυμο σας"
+        android:hint="Enter your surname"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColorHint="#999999"
@@ -93,7 +93,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Διεύθυνση"
+        android:text="Address"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε τη διεύθυνση σας"
+        android:hint="Enter your home address"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColorHint="#999999"
@@ -122,7 +122,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Πόλη"
+        android:text="City"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -136,7 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε τη πόλη"
+        android:hint="Enter the city of your address"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColorHint="#999999"
@@ -151,7 +151,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Ταχυδρομικός Κώδικας"
+        android:text="Zipcode"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -165,7 +165,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε τον ταχ. κώδ."
+        android:hint="Enter the zipcode"
         android:padding="12dp"
         android:inputType="number"
         android:textColorHint="#999999"
@@ -180,7 +180,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Ομάδα Αίματος"
+        android:text="Blood Type"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -223,7 +223,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:backgroundTint="@color/green"
-        android:text="Αποθήκευση"
+        android:text="Save"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
