translate Location Activities

--- a/app/src/main/res/layout/activity_add_location.xml
+++ b/app/src/main/res/layout/activity_add_location.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Προσθήκη Τοποθεσίας"
+        android:text="Add Location"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -83,7 +83,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Όνομα Τοποθεσίας"
+        android:text="Location Name"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε το όνομα"
+        android:hint="Enter location name"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColorHint="#999999"
@@ -112,7 +112,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Διεύθυνση"
+        android:text="Address"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -126,7 +126,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε τη διεύθυνση"
+        android:hint="Enter address"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColor="@color/black"
@@ -142,7 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:textColor="@color/black"
-        android:text="Ταχυδρομικός Κώδικας"
+        android:text="Zip Code"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -156,7 +156,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε τον ταχ. κώδ."
+        android:hint="Enter zip code"
         android:padding="12dp"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -171,7 +171,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:textColor="@color/black"
-        android:text="Πόλη"
+        android:text="City"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -185,7 +185,7 @@
         android:layout_marginTop="5dp"
         android:textColorHint="#999999"
         android:background="@drawable/background_rectangle"
-        android:hint="Εισαγάγετε την πόλη"
+        android:hint="Enter city"
         android:padding="12dp"
         android:inputType="textCapSentences"
         android:textColor="@color/black"
@@ -200,7 +200,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:backgroundTint="@color/green"
-        android:text="Προσθήκη"
+        android:text="Add"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
