--- a/app/src/main/res/layout/activity_view_location.xml
+++ b/app/src/main/res/layout/activity_view_location.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Προβολή Τοποθεσίας"
+        android:text="View Location"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -83,7 +83,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Όνομα Τοποθεσίας"
+        android:text="Location Name"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -111,7 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:textColor="@color/black"
-        android:text="Διεύθυνση"
+        android:text="Address"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/ViewLocationsBackground"
@@ -138,7 +138,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:textColor="@color/black"
-        android:text="Ταχυδρομικός Κώδικας"
+        android:text="Zip Code"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/ViewLocationsBackground"
@@ -165,7 +165,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:textColor="@color/black"
-        android:text="Πόλη"
+        android:text="City"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/ViewLocationsBackground"
