--- a/app/src/main/res/layout/activity_locations.xml
+++ b/app/src/main/res/layout/activity_locations.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Τοποθεσίες"
+        android:text="Locations"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
