--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -128,17 +128,17 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="132dp"
+                    android:layout_height="139dp"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_sos" />
 
                 <TextView
                     android:id="@+id/callTxt"
                     android:layout_width="match_parent"
-                    android:layout_height="62dp"
+                    android:layout_height="57dp"
                     android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:text="Κλήσεις Έκτακτης Ανάγκης"
+                    android:text="Emergency Calls"
                     android:textAlignment="center"
                     android:textColor="@color/blue"
                     android:textSize="18sp"
@@ -173,7 +173,7 @@
                     android:layout_height="60dp"
                     android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:text="Επιστροφή στο σπίτι"
+                    android:text="Return Home"
                     android:textAlignment="center"
                     android:textColor="@color/blue"
                     android:textSize="18sp"
@@ -208,7 +208,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:text="Χάρτης"
+                    android:text="Map"
                     android:textAlignment="center"
                     android:textColor="@color/blue"
                     android:textSize="18sp"
@@ -243,7 +243,7 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:text="Επαφές"
+                    android:text="Contacts"
                     android:textAlignment="center"
                     android:textColor="@color/blue"
                     android:textSize="18sp"
@@ -278,7 +278,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:text="Χάπια"
+                    android:text="Pills"
                     android:textAlignment="center"
                     android:textColor="@color/blue"
                     android:textSize="18sp"
@@ -313,7 +313,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:text="Προφίλ"
+                    android:text="Profile"
                     android:textAlignment="center"
                     android:textColor="@color/blue"
                     android:textSize="18sp"
