--- a/app/src/main/res/layout/activity_display_pills.xml
+++ b/app/src/main/res/layout/activity_display_pills.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Προβολή Χαπιών"
+        android:text="View Pills"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
