--- a/app/src/main/res/layout/activity_pill_schedule.xml
+++ b/app/src/main/res/layout/activity_pill_schedule.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Πρόγραμμα Χαπιών"
+        android:text="Pill Schedule"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
-        android:text="Ημέρα"
+        android:text="Day"
         android:textColor="@color/black"
         android:textSize="23sp"
         android:textStyle="bold"
