--- a/app/src/main/res/layout/item_pill.xml
+++ b/app/src/main/res/layout/item_pill.xml
@@ -20,7 +20,7 @@
         android:id="@+id/pillFrequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3 φορές την εβδομάδα"
+        android:text="3 times per week"
         android:textSize="16sp"
         android:textColor="@color/black" />
 </LinearLayout>
