--- a/app/src/main/res/layout/activity_display_profile.xml
+++ b/app/src/main/res/layout/activity_display_profile.xml
@@ -222,6 +222,8 @@
             android:layout_height="48dp"
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:background="@drawable/background_rectangle" />
 
         <TextView
@@ -230,6 +232,8 @@
             android:padding="12dp"
             android:layout_height="48dp"
             android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:background="@drawable/background_rectangle" />
 
     </LinearLayout>
