--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -235,6 +235,8 @@
             android:padding="12dp"
             android:layout_height="48dp"
             android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/background_rectangle" />
 
@@ -244,6 +246,8 @@
             android:padding="12dp"
             android:layout_height="48dp"
             android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:background="@drawable/background_rectangle" />
 
     </LinearLayout>
