--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Επεξεργασία Προφίλ"
+        android:text="Edit Profile"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
