--- a/app/src/main/res/layout/activity_emergency_selection.xml
+++ b/app/src/main/res/layout/activity_emergency_selection.xml
@@ -70,9 +70,9 @@
 
     <LinearLayout
         android:id="@+id/ambulance_btn"
-        android:layout_width="240dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="25dp"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_weight="1"
         android:background="@drawable/background_rectangle"
         android:clickable="true"
@@ -115,8 +115,8 @@
 
     <LinearLayout
         android:id="@+id/police_btn"
-        android:layout_width="240dp"
-        android:layout_height="180dp"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_weight="1"
         android:background="@drawable/background_rectangle"
@@ -159,8 +159,8 @@
 
     <LinearLayout
         android:id="@+id/firedepartment_btn"
-        android:layout_width="240dp"
-        android:layout_height="180dp"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_weight="1"
         android:background="@drawable/background_rectangle"
@@ -187,7 +187,7 @@
 
         <ImageView
             android:layout_width="96dp"
-            android:layout_height="72dp"
+            android:layout_height="68dp"
             android:layout_gravity="center"
             android:layout_marginBottom="8dp"
             android:contentDescription="Fire department icon"
